--- a/css/style.css
+++ b/css/style.css
@@ -129,7 +129,7 @@ ol {
 	right: 0;
 	height: 4px;
 	width: 80px;
-	background: #7fad39;
+	background: #FF7F00;
 	content: "";
 	margin: 0 auto;
 }
@@ -167,7 +167,7 @@ ol {
 	color: #ffffff;
 	text-transform: uppercase;
 	font-weight: 700;
-	background: #7fad39;
+	background: #FF7F00;
 	letter-spacing: 2px;
 }
 
@@ -178,7 +178,7 @@ ol {
 	text-transform: uppercase;
 	display: inline-block;
 	padding: 13px 30px 12px;
-	background: #7fad39;
+	background: #FF7F00;
 	border: none;
 }
 
@@ -251,7 +251,8 @@ ol {
 -----------------------*/
 
 .header__top {
-	background: #f5f5f5;
+	background: #000;
+	color: #fff;
 }
 
 .header__top__left {
@@ -260,7 +261,7 @@ ol {
 
 .header__top__left ul li {
 	font-size: 14px;
-	color: #1c1c1c;
+	color: #fff;
 	display: inline-block;
 	margin-right: 45px;
 	position: relative;
@@ -286,7 +287,7 @@ ol {
 }
 
 .header__top__left ul li i {
-	color: #252525;
+	color: #fff;
 	margin-right: 5px;
 }
 
@@ -315,8 +316,12 @@ ol {
 .header__top__right__social a {
 	font-size: 14px;
 	display: inline-block;
-	color: #1c1c1c;
+	color: #fff;
 	margin-right: 20px;
+}
+
+.header__top__right__social a:hover {
+	color: #FF7F00;
 }
 
 .header__top__right__social a:last-child {
@@ -353,14 +358,14 @@ ol {
 
 .header__top__right__language div {
 	font-size: 14px;
-	color: #1c1c1c;
+	color: #fff;
 	display: inline-block;
 	margin-right: 4px;
 }
 
 .header__top__right__language span {
 	font-size: 14px;
-	color: #1c1c1c;
+	color: #fff;
 	position: relative;
 	top: 2px;
 }
@@ -400,7 +405,7 @@ ol {
 .header__top__right__auth a {
 	display: block;
 	font-size: 14px;
-	color: #1c1c1c;
+	color: #fff;
 }
 
 .header__top__right__auth a i {
@@ -449,7 +454,7 @@ ol {
 }
 
 .header__menu ul li .header__menu__dropdown li:hover>a {
-	color: #7fad39;
+	color: #FF7F00;
 }
 
 .header__menu ul li .header__menu__dropdown li a {
@@ -460,7 +465,7 @@ ol {
 }
 
 .header__menu ul li.active a {
-	color: #7fad39;
+	color: #FF7F00;
 }
 
 .header__menu ul li:hover .header__menu__dropdown {
@@ -470,7 +475,7 @@ ol {
 }
 
 .header__menu ul li:hover>a {
-	color: #7fad39;
+	color: #FF7F00;
 }
 
 .header__menu ul li:last-child {
@@ -524,7 +529,7 @@ ol {
 .header__cart ul li a span {
 	height: 13px;
 	width: 13px;
-	background: #7fad39;
+	background: #FF7F00;
 	font-size: 10px;
 	color: #ffffff;
 	line-height: 13px;
@@ -587,7 +592,7 @@ ol {
 }
 
 .hero__categories__all {
-	background: #7fad39;
+	background: #FF7F00;
 	position: relative;
 	padding: 10px 25px 10px 40px;
 	cursor: pointer;
@@ -700,10 +705,10 @@ ol {
 
 .hero__search__phone__icon {
 	font-size: 18px;
-	color: #7fad39;
+	color: #FF7F00;
 	height: 50px;
 	width: 50px;
-	background: #f5f5f5;
+	background: #000;
 	line-height: 50px;
 	text-align: center;
 	border-radius: 50%;
@@ -738,7 +743,7 @@ ol {
 	text-transform: uppercase;
 	font-weight: 700;
 	letter-spacing: 4px;
-	color: #7fad39;
+	color: #FF7F00;
 }
 
 .hero__text h2 {
@@ -840,7 +845,7 @@ ol {
 	bottom: -2px;
 	width: 100%;
 	height: 2px;
-	background: #7fad39;
+	background: #FF7F00;
 	content: "";
 	opacity: 0;
 }
@@ -888,8 +893,8 @@ ol {
 }
 
 .featured__item__pic__hover li:hover a {
-	background: #7fad39;
-	border-color: #7fad39;
+	background: #FF7F00;
+	border-color: #FF7F00;
 }
 
 .featured__item__pic__hover li:hover a i {
@@ -1236,13 +1241,21 @@ ol {
 
 .sidebar__item__size label {
 	font-size: 12px;
-	color: #6f6f6f;
+	color: #000;
 	display: inline-block;
+	border: 1px solid #FF7F00;
+	border-radius: 25px;
 	padding: 8px 25px 6px;
-	background: #f5f5f5;
 	cursor: pointer;
 	margin-bottom: 0;
 }
+
+.sidebar__item__size label:hover {
+	background: #ff8000;
+	color: #fff;
+	transition: all 1s;
+}
+
 
 .sidebar__item__size label input {
 	position: absolute;
@@ -1324,8 +1337,8 @@ ol {
 }
 
 .product__item__pic__hover li:hover a {
-	background: #7fad39;
-	border-color: #7fad39;
+	background: #FF7F00;
+	border-color: #FF7F00;
 }
 
 .product__item__pic__hover li:hover a i {
@@ -1523,7 +1536,7 @@ ol {
 }
 
 .filter__option span:hover {
-	color: #7fad39;
+	color: #FF7F00;
 }
 
 .product__item {
@@ -1564,8 +1577,8 @@ ol {
 }
 
 .product__item__pic__hover li:hover a {
-	background: #7fad39;
-	border-color: #7fad39;
+	background: #FF7F00;
+	border-color: #FF7F00;
 }
 
 .product__item__pic__hover li:hover a i {
@@ -1645,8 +1658,8 @@ ol {
 
 .product__pagination a:hover,
 .blog__pagination a:hover {
-	background: #7fad39;
-	border-color: #7fad39;
+	background: #FF7F00;
+	border-color: #FF7F00;
 	color: #ffffff;
 }
 
@@ -1720,9 +1733,9 @@ ol {
 .product__details__text .heart-icon {
 	display: inline-block;
 	font-size: 16px;
-	color: #6f6f6f;
+	color: #000;
 	padding: 13px 16px 13px;
-	background: #f5f5f5;
+	background: #FF7F00;
 }
 
 .product__details__text ul {
@@ -1774,7 +1787,7 @@ ol {
 	display: inline-block;
 	position: relative;
 	text-align: center;
-	background: #f5f5f5;
+	background: #FF7F00;
 	margin-bottom: 5px;
 }
 
@@ -1782,17 +1795,17 @@ ol {
 	height: 100%;
 	width: 100%;
 	font-size: 16px;
-	color: #6f6f6f;
+	color: #000;
 	width: 50px;
 	border: none;
-	background: #f5f5f5;
+	background: #f5a657;
 	text-align: center;
 }
 
 .pro-qty .qtybtn {
 	width: 35px;
 	font-size: 16px;
-	color: #6f6f6f;
+	color: #000;
 	cursor: pointer;
 	display: inline-block;
 }
@@ -1974,7 +1987,7 @@ ol {
 .primary-btn.cart-btn {
 	color: #6f6f6f;
 	padding: 14px 30px 12px;
-	background: #f5f5f5;
+	background: #000;
 }
 
 .primary-btn.cart-btn span {
@@ -2019,7 +2032,7 @@ ol {
 }
 
 .shoping__checkout {
-	background: #f5f5f5;
+	background: #000;
 	padding: 30px;
 	padding-top: 20px;
 	margin-top: 50px;
@@ -2076,7 +2089,7 @@ ol {
 .checkout h6 {
 	color: #999999;
 	text-align: center;
-	background: #f5f5f5;
+	background: #000;
 	border-top: 1px solid #6AB963;
 	padding: 12px 0 12px;
 	margin-bottom: 75px;
@@ -2154,8 +2167,8 @@ ol {
 }
 
 .checkout__input__checkbox label input:checked~.checkmark {
-	background: #7fad39;
-	border-color: #7fad39;
+	background: #FF7F00;
+	border-color: #FF7F00;
 }
 
 .checkout__input__checkbox label input:checked~.checkmark:after {
@@ -2189,7 +2202,7 @@ ol {
 }
 
 .checkout__order {
-	background: #f5f5f5;
+	background: #000;
 	padding: 40px;
 	padding-top: 30px;
 }
@@ -2326,6 +2339,13 @@ ol {
 	border-radius: 25px;
 }
 
+.blog__item__text .blog__btn:hover {
+	color: #fff;
+	background: #FF7F00;
+	border: 1px solid #FF7F00;
+	transition: all 1s;
+}
+
 .blog__item__text .blog__btn span {
 	position: relative;
 	top: 1px;
@@ -2382,7 +2402,7 @@ ol {
 }
 
 .blog__sidebar__item ul li a:hover {
-	color: #7fad39;
+	color: #FF7F00;
 }
 
 .blog__sidebar__search {
@@ -2456,12 +2476,19 @@ ol {
 
 .blog__sidebar__item__tags a {
 	font-size: 16px;
-	color: #6f6f6f;
-	background: #f5f5f5;
+	color: #000;
+	border-radius: 25px;
+	border: 1px solid #FF7F00;
 	display: inline-block;
 	padding: 7px 26px 5px;
 	margin-right: 6px;
 	margin-bottom: 10px;
+}
+
+.blog__sidebar__item__tags a:hover {
+	color: #fff;
+	background: #FF7F00;
+	transition: all 1s;
 }
 
 /*---------------------
@@ -2602,7 +2629,7 @@ ol {
 }
 
 .blog__details__widget .blog__details__social a:hover {
-	color: #7fad39;
+	color: #FF7F00;
 }
 
 .blog__details__widget .blog__details__social a:last-child {
@@ -2614,7 +2641,7 @@ ol {
 -----------------------*/
 
 .footer {
-	background: #F3F6FA;
+	background: #000;
 	padding-top: 70px;
 	padding-bottom: 0;
 }
@@ -2625,7 +2652,7 @@ ol {
 
 .footer__about ul li {
 	font-size: 16px;
-	color: #1c1c1c;
+	color: #fff;
 	line-height: 36px;
 	list-style: none;
 }
@@ -2644,7 +2671,7 @@ ol {
 }
 
 .footer__widget h6 {
-	color: #1c1c1c;
+	color: #fff;
 	font-weight: 700;
 	margin-bottom: 10px;
 }
@@ -2659,14 +2686,14 @@ ol {
 }
 
 .footer__widget ul li a {
-	color: #1c1c1c;
+	color: #fff;
 	font-size: 14px;
 	line-height: 32px;
 }
 
 .footer__widget p {
 	font-size: 14px;
-	color: #1c1c1c;
+	color: #fff;
 	margin-bottom: 30px;
 }
 
@@ -2679,13 +2706,13 @@ ol {
 	width: 100%;
 	font-size: 16px;
 	padding-left: 20px;
-	color: #1c1c1c;
+	color: #fff;
 	height: 46px;
 	border: 1px solid #ededed;
 }
 
 .footer__widget form input::placeholder {
-	color: #1c1c1c;
+	color: #fff;
 }
 
 .footer__widget form button {
@@ -2701,12 +2728,11 @@ ol {
 	height: 41px;
 	width: 41px;
 	font-size: 16px;
-	color: #404040;
-	border: 1px solid #ededed;
+	color: #fff;
 	border-radius: 50%;
 	line-height: 38px;
 	text-align: center;
-	background: #ffffff;
+	background: #FF7F00;
 	-webkit-transition: all, 0.3s;
 	-moz-transition: all, 0.3s;
 	-ms-transition: all, 0.3s;
@@ -2720,9 +2746,8 @@ ol {
 }
 
 .footer__widget .footer__widget__social a:hover {
-	background: #7fad39;
-	color: #ffffff;
-	border-color: #ffffff;
+	background: #000;
+	color: #FF7F00;
 }
 
 .footer__copyright {
@@ -2734,7 +2759,7 @@ ol {
 
 .footer__copyright__text {
 	font-size: 14px;
-	color: #1c1c1c;
+	color: #fff;
 	float: left;
 	line-height: 25px;
 }
@@ -2758,11 +2783,11 @@ ol {
 
 .contact__widget span {
 	font-size: 36px;
-	color: #7fad39;
+	color: #FF7F00;
 }
 
 .contact__widget h4 {
-	color: #1c1c1c;
+	color: #fff;
 	font-weight: 700;
 	margin-bottom: 6px;
 	margin-top: 18px;
@@ -2797,7 +2822,7 @@ ol {
 
 .map .map-inside i {
 	font-size: 48px;
-	color: #7fad39;
+	color: #FF7F00;
 	position: absolute;
 	bottom: -75px;
 	left: 50%;
@@ -2833,7 +2858,7 @@ ol {
 .map .map-inside .inside-widget h4 {
 	font-size: 22px;
 	font-weight: 700;
-	color: #1c1c1c;
+	color: #fff;
 	margin-bottom: 4px;
 }
 
@@ -2854,7 +2879,7 @@ ol {
 }
 
 .contact__form__title h2 {
-	color: #1c1c1c;
+	color: #000;
 	font-weight: 700;
 }
 
@@ -3054,7 +3079,7 @@ ol {
 	.humberger__menu__cart ul li a span {
 		height: 13px;
 		width: 13px;
-		background: #7fad39;
+		background: #FF7F00;
 		font-size: 10px;
 		color: #ffffff;
 		line-height: 13px;
@@ -3120,7 +3145,7 @@ ol {
 		-webkit-border-radius: 0;
 		border-radius: 0;
 		background: transparent;
-		color: #7fad39;
+		color: #FF7F00;
 	}
 	.humberger__menu__wrapper .slicknav_nav .slicknav_row,
 	.humberger__menu__wrapper .slicknav_nav a {
@@ -3312,7 +3337,7 @@ ol {
 	.humberger__menu__cart ul li a span {
 		height: 13px;
 		width: 13px;
-		background: #7fad39;
+		background: #FF7F00;
 		font-size: 10px;
 		color: #ffffff;
 		line-height: 13px;
@@ -3378,7 +3403,7 @@ ol {
 		-webkit-border-radius: 0;
 		border-radius: 0;
 		background: transparent;
-		color: #7fad39;
+		color: #FF7F00;
 	}
 	.humberger__menu__wrapper .slicknav_nav .slicknav_row,
 	.humberger__menu__wrapper .slicknav_nav a {
