--- a/css/newStyle.css
+++ b/css/newStyle.css
@@ -1,3 +1,44 @@
 /* .text-white{
     color: #fff !important;
 } */
+
+.latest-product__item__pic img{
+    height: 70px !important;
+    padding: 0 !important;
+}
+
+.rightmenu{
+    position: relative;
+}
+
+.rightmenu .nav-menu{
+    display: none;
+    position: absolute;
+    top: 0;
+    left: 100%;
+    padding: 0 10px 0;
+    background: #003049;
+    border-radius: 10px;
+    border: none;
+    -webkit-transition: all 0.5s ease-in-out;
+    -moz-transition: all 0.5s ease-in-out;
+    -o-transition: all 0.5s ease-in-out;
+    transition: all 0.5s ease-in-out;
+}
+
+
+.nav-menu li a{
+    color: #fff !important;
+}
+
+.rightmenu:hover .nav-menu{
+    display: block;
+    z-index: 10000;
+    height: auto;
+}
+
+.nav-menu li a:hover{
+    color: #003049;
+	text-decoration: underline;
+    font-weight: normal !important;
+}
