--- a/css/style.css
+++ b/css/style.css
@@ -396,7 +396,11 @@ ol {
 }
 
 .header__menu ul li:hover>a {
-	color: #003049;
+	color: #007DFA;
+	text-decoration: none;
+	display: inline-block;
+	/* box-shadow: inset 100px 0 0 0 #54b3d6; */
+	/* color: white; */
 }
 
 .header__menu ul li:last-child {
@@ -632,13 +636,13 @@ ol {
 
 .hero__search__phone__text,
 .hero__search__phone__text a,
-.hero__search__phone__icon {
+.hero__search__phone__icon{
 	font-size: 18px;
 	color: #003049;
 	height: 50px;
 	width: 50px;
 	/* background: #000; */
-	border: 1px solid #ccc;
+	/* border: 1px solid #ccc; */
 	background: #ccc;
 	line-height: 50px;
 	text-align: center;
@@ -648,9 +652,12 @@ ol {
 	cursor: pointer;
 }
 
-.hero__search__phone__text a:hover{
-	padding: 5px;
+.hero__search__phone__text a:hover,
+.hero__search__phone__icon:hover{
+	background-color: #003049;
+	color:#fff;
 }
+
 
 .hero__search__phone__text h5 {
 	color: #1c1c1c;
@@ -943,8 +950,9 @@ ol {
 	padding-top: 10px;
 }
 
-.latest-product__item__text h6 {
+.latest-product__item__text > h6 {
 	color: #252525;
+	/* height: 45px !important; */
 	margin-bottom: 8px;
 }
 
@@ -994,12 +1002,13 @@ ol {
 	color: #000;
 	font-weight: 700;
 	margin-right: 20px;
+	/* margin-left: 20px; */
 	position: relative;
 }
 
 .breadcrumb__option a:after {
 	position: absolute;
-	right: -12px;
+	right: -17px;
 	top: 13px;
 	height: 1px;
 	width: 10px;
