--- a/css/style.css
+++ b/css/style.css
@@ -810,6 +810,7 @@ ol {
 	overflow: hidden;
 }
 
+.product__item__pic a img:hover,
 .featured__item__pic a img:hover{
     width: 100%;
     transform: scale(1.1);
@@ -1034,11 +1035,14 @@ ol {
 }
 
 /*---------------------
-  Sidebar
+Sidebar
 -----------------------*/
 
 .sidebar__item {
 	margin-bottom: 35px;
+	border-radius: 10px;
+	padding: 10px 20px;
+	box-shadow: 0 0 10px #1c1c1c;
 }
 
 .sidebar__item.sidebar__item__color--option {
@@ -1502,9 +1506,11 @@ ol {
 
 .product__item__pic {
 	height: 270px;
+	width: 262px;
 	position: relative;
 	overflow: hidden;
 }
+
 
 .product__item__pic__hover {
 	position: absolute;
