--- a/css/style.css
+++ b/css/style.css
@@ -251,7 +251,7 @@ ol {
 -----------------------*/
 
 .header__top {
-	background: #F5F5F5;
+	background: #003049;
 	color: #000;
 }
 
@@ -261,7 +261,7 @@ ol {
 
 .header__top__left ul li {
 	font-size: 14px;
-	color: #000;
+	color: #fff;
 	display: inline-block;
 	margin-right: 45px;
 	position: relative;
@@ -287,7 +287,7 @@ ol {
 }
 
 .header__top__left ul li i {
-	color: #000;
+	color: #fff;
 	margin-right: 5px;
 }
 
@@ -307,7 +307,7 @@ ol {
 .header__top__right__auth a {
 	display: block;
 	font-size: 14px;
-	color: #000;
+	color: #fff;
 }
 
 .header__top__right__auth a i {
@@ -546,6 +546,7 @@ ol {
 }
 
 .hero__categories ul {
+	background-color: #ffff;
 	border: 1px solid #000;
 	padding-left: 40px;
 	padding-top: 10px;
