--- a/admin/assets/css/newstyle.css
+++ b/admin/assets/css/newstyle.css
@@ -1,8 +1,20 @@
 .renderProduct tr .img img{
     width: 100px !important;
-    height: 100px !important;
+}
+
+.renderProduct tr td{
+    font-size: 12px;
 }
 
 table thead{
     font-size: 12px;
+}
+
+.renderMember tr .img img{
+    width: 100%;
+}
+
+.xoa,
+.sua{
+    border: none;
 }
