--- a/css/newStyle.css
+++ b/css/newStyle.css
@@ -66,6 +66,7 @@
     padding: 10px 0;
     border-radius: 10px;
     box-shadow:  0 0 5px #000;
+    background: #fff;
 }
 .shop__menu li a::after,
 .header__menu > ul > li >.nav__link::after{
