--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@
 html,
 body {
 	/* min-height: 100vh; */
-	/* background: rgba(0, 0, 0, 0.445); */
+	background-image: url(/img/bg-vth.jpg);
 	height: 100%;
 	/* background: #f3f3f3; */
 	/* font-family: "Cairo", sans-serif; */
@@ -952,6 +952,7 @@ ol {
 .latest-product__item {
 	margin-bottom: 20px;
 	overflow: hidden;
+	background: #fff;
 	display: block;
 }
 
@@ -996,6 +997,7 @@ ol {
 
 .from-blog .blog__item {
 	margin-bottom: 30px;
+	background: #fff;
 }
 
 .from-blog__title {
