--- a/css/style.css
+++ b/css/style.css
@@ -500,6 +500,7 @@ ol {
 
 .hero {
 	padding-bottom: 50px;
+	
 }
 
 .hero.hero-normal {
@@ -579,12 +580,15 @@ ol {
 }
 
 .hero__search {
-	overflow: hidden;
-	margin-bottom: 30px;
+    overflow: hidden;
+    margin-bottom: 30px;
+	width: 100%;
+    height: 780px;
+    z-index: 100;
+    position: absolute;
 }
-
 .hero__search__form {
-	width: 610px;
+	width: 100%;
 	height: 50px;
 	border: 1px solid #ebebeb;
 	position: relative;
