--- a/css/style.css
+++ b/css/style.css
@@ -323,11 +323,12 @@ ol {
 }
 
 .box_logo{
+	width: 40%;
 	height: 82px;
 }
 
 .header__logo {
-	width: 262px;
+	width: 100%;
 	height: 100%;
 	padding: 15px 0;
 	text-align: center;
@@ -1521,8 +1522,7 @@ Sidebar
 }
 
 .product__item__pic {
-	height: 270px;
-	width: 262px;
+	width: 100%;
 	position: relative;
 	overflow: hidden;
 }
@@ -2927,6 +2927,9 @@ Sidebar
 /* Medium Device = 1200px */
 
 @media only screen and (min-width: 992px) and (max-width: 1199px) {
+	.box_logo{
+		width: 40%;
+	}
 	.header__menu ul li {
 		margin-right: 45px;
 	}
@@ -3020,7 +3023,7 @@ Sidebar
 		top: 0;
 		height: 100%;
 		overflow-y: auto;
-		z-index: 99;
+		z-index: 1000;
 		padding: 30px;
 		padding-top: 50px;
 		opacity: 0;
