--- a/css/style.css
+++ b/css/style.css
@@ -818,9 +818,9 @@ ol {
 
 .featured__item__pic {
 	position: relative;
-	width: 262px;
-	height: 270px;
-	/* background-position: center center; */
+	width: 100%;
+	height: auto;
+	background-position: center center;
 	overflow: hidden;
 }
 
@@ -3191,7 +3191,7 @@ Sidebar
 
 @media only screen and (max-width: 767px) {
 	.featured__item__pic a img {
-		width: 92%;
+		width: 100%;
 	}
 	.hero__categories {
 		margin-bottom: 30px;
