--- a/css/style.css
+++ b/css/style.css
@@ -3565,6 +3565,9 @@ Sidebar
 	.shoping__cart__table table tbody tr td h5{
 		font-size: 12px;
 	}
+	.owl-carousel .owl-item img{
+		margin: 0 50px;
+	}
 }
 
 
