--- a/css/style.css
+++ b/css/style.css
@@ -3492,6 +3492,16 @@ Sidebar
 /* Small Device = 320px */
 
 @media only screen and (max-width: 479px) {
+	.user_order thead tr th{
+		font-size: 10px;
+	}
+	.user_order tbody tr td{
+		font-size: 12px;
+	}
+	
+	.user_order tbody tr td button{
+		font-size: 10px;
+	}
 	.breadcrumb__text h2 {
 		font-size: 12px !important;
 	}
@@ -3566,7 +3576,10 @@ Sidebar
 		font-size: 12px;
 	}
 	.owl-carousel .owl-item img{
-		margin: 0 10px;
+		margin: 0 30%;
+	}
+	.categories__item.set-bg img{
+		padding: 20px 0 0 !important;
 	}
 }
 
@@ -3585,4 +3598,10 @@ Sidebar
 	height: 170px;
 	width: auto;
 	padding: 20px 51px 0;
+}
+
+@media only screen and (max-width: 290px) {
+	.owl-carousel .owl-item img{
+		margin: 0 20% !important;
+	}
 }
